tests/files/flow_controller_tests/should_run/101.cmdr
x = 5;
print arccot(x);