tests/files/flow_controller_tests/should_fail/092.cmdr
x = "cat";
print arccot(x);